# ComponentsSerialization

./: Readme.md
editor/: CMakeLists.txt
editor/source/: main.cpp
engine/: CMakeLists.txt
engine/include/: Component.h  Entity.h  Globals.h
engine/source/: Any.h  Component.cpp  Component.h  ComponentFactory.cpp  ComponentFactory.h  Entity.cpp  Entity.h  Globals.h  Traits.h  Variant.cpp  Variant.h
engine/source/serialization/: GlobalObjectFactory.cpp  GlobalObjectFactory.h  Property.cpp  Property.h  PropertyMap.cpp  PropertyMap.h  Serializable.cpp  Serializable.h  Serializer.cpp  Serializer.h
game/: CMakeLists.txt
game/source/: EyeComponent.cpp  EyeComponent.h  GameFactory.cpp  GameFactory.h  HeadComponent.cpp  HeadComponent.h  main.cpp
